<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_email_address"
            android:textSize="18sp"
            />

            <TextView
                android:maxLines="1"
                android:autofillHints="Email address"
                android:hint="Email address"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/userEmailtoSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText">
            </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/confirm"
            android:textStyle="italic" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="5dp"
            android:id="@+id/btnCancel"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>